# CSV2Parquet

./: LICENSE  README.md  makefile  pyproject.toml
app/: convert.py  main.py
