[tool.poetry]
name = "app"
version = "1.2.2"
description = "Simple GUI application for CSV-to-Parquet conversion."
authors = ["Otto Itkonen <itkoo@pm.me>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.14"
pandas = "^2.2.3"
pyside6 = "^6.9.0"
pyarrow = "^19.0.1"
fastparquet = "^2024.11.0"


[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
